@@ -1,3 +1,10 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/mouse.c:
+	* src/pnp.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.1.0.
+
 2006-03-09  Eric Anholt  <anholt@FreeBSD.org>
 
 	* src/mouse.c: (MouseCommonOptions):
